--- a/src/index.css
+++ b/src/index.css
@@ -6,4 +6,7 @@
   font-family: Inter, system-ui, Avenir, Helvetica, Arial, sans-serif;
 }
 
-
+/* #phaser-game canvas {
+  display: block;
+  margin: auto;
+} */
